Fix mega menu submenu alignment with header container
- Update walker to use lg:container to match header breakpoint
- Remove margin reset from submenu ul to preserve container centering

--- a/app/resources/css/menus.css
+++ b/app/resources/css/menus.css
@@ -61,7 +61,7 @@
 }
 
 #primary-menu > li > .sub-menu > ul {
-  @apply grid list-none m-0 p-0;
+  @apply grid list-none p-0;
   grid-template-columns: repeat(4, 1fr);
   gap: 1.5rem 2rem;
 }
